--- a/app/pages/dogs/dog-detail/dog-detail.page.html
+++ b/app/pages/dogs/dog-detail/dog-detail.page.html
@@ -1,16 +1,16 @@
-<ion-header *ngIf="dog | async as d; else loading">
-  <ion-toolbar class="ion-color" [style.background-color]="d.color" [style.color]="d.colorText">
+<ion-header class="ion-no-border">
+  <ion-toolbar class="ion-color" [style.background-color]="dog?.color" [style.color]="dog?.colorText">
     <ion-buttons slot="start">
       <ion-menu-button menu="leftMenu"></ion-menu-button>
       <ion-back-button defaultHref="/"></ion-back-button>
     </ion-buttons>
     <ion-title>
-      <!--<ion-avatar [style.background-color]="dog.color">
-        <ion-img [src]="dog.imageUrl"></ion-img>
-      </ion-avatar>-->{{ d.name }}
+      <!--<ion-avatar [style.background-color]="dog?.color">
+        <ion-img [src]="dog?.imageUrl"></ion-img>
+      </ion-avatar>-->{{ dog?.name }}
     </ion-title>
     <ion-buttons slot="end">
-      <ion-button [routerLink]="['/dzd/dogs/edit/', d.id]">
+      <ion-button [routerLink]="['/dzd/dogs/edit/', dog?.id]">
         <ion-icon name="create-outline" slot="icon-only"></ion-icon>
     </ion-button>
     </ion-buttons>
@@ -19,6 +19,20 @@
 
 <ion-content>
   <ng-template #loading>Loading Data...</ng-template>
+  <ion-grid class="ion-no-padding" [style.background-color]="dog?.color" [style.color]="dog?.colorText">
+    <ion-row style="align-items: center;">
+      <ion-col size-xs="12" size-sm="3" size-md="2" size-lg="3" size-xl="2" class="ion-no-padding ion-text-center">
+          <ion-avatar class="dogAvatar ion-margin-top ion-margin-bottom" style="border-color: white;" [style.background-color]="dog?.color">
+            <ion-img *ngIf="dog?.imageUrl; else genericImg" [src]="dog?.imageUrl" width="100px" height="100px" ></ion-img>
+            <ng-template #genericImg><ion-img src="../../assets/img/generic-paw.png" width="100px" height="100px" ></ion-img></ng-template>
+          </ion-avatar>
+      </ion-col>
+      <ion-col size-xs="12" size-sm="9" size-md="10" size-lg="9" size-xl="10" *ngIf="dog?.kc_name!==undefined">
+        <h4 class="ion-text-center ion-text-sm-left ion-text-uppercase ion-margin-top ion-margin-bottom">{{ dog?.kc_name }}</h4>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  
   <ion-list>
     <ion-item *ngFor="let w of weights | async">
       <ion-label><h2>{{ w.weight | number: '1.2-2' }}kg</h2><p>{{ w.date.toDate() | date: 'dd MMMM yyyy' }}</p></ion-label>
