--- a/app/pages/dogs/edit-dog/edit-dog.page.html
+++ b/app/pages/dogs/edit-dog/edit-dog.page.html
@@ -1,12 +1,48 @@
 <ion-header>
-  <ion-toolbar class="ion-color" [style.background-color]="dog.color" [style.color]="dog.colorText">
+  <ion-toolbar class="ion-color" [style.background-color]="dog?.color" [style.color]="dog?.colorText">
     <ion-buttons slot="start">
-      <ion-back-button [defaultHref]="['/dzd/dogs/', dog.id]"></ion-back-button>
+      <ion-back-button [defaultHref]="['/dzd/dogs/', dog?.id]"></ion-back-button>
     </ion-buttons>
-    <ion-title>Edit {{ dog.name }}</ion-title>
+    <ion-title>Edit {{ dog?.name }}</ion-title>
+    <ion-buttons slot="primary">
+      <ion-button (click)="updateDog()" [disabled]="!form.valid">
+        <ion-icon name="checkmark" slot="icon-only"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <form [formGroup]="form">
+    <ion-grid>
+      <ion-row>
+        <ion-col size-xs="4" size-sm="3">
+          <app-image-picker (imagePick)="onImagePicked($event)" #imgPicker></app-image-picker>
+        </ion-col>
+        <ion-col>
+          <ion-item>
+            <ion-label position="floating">KC Name</ion-label>
+            <ion-input type="text" autocomplete="off" autocorrect="off" formControlName="kc_name"></ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <ion-item>
+            <ion-label position="floating">Name</ion-label>
+            <ion-input type="text" autocomplete="off" autocorrect="off" formControlName="name"></ion-input>
+          </ion-item>
+        </ion-col>
+        <ion-col>
+          <ion-item>
+            <ion-label position="floating">Sex</ion-label>
+            <ion-select interface="popover" formControlName="sex">
+              <ion-select-option value="Dog">Dog</ion-select-option>
+              <ion-select-option value="Bitch">Bitch</ion-select-option>
+            </ion-select>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </form>
 </ion-content>
