--- a/app/pages/stats/stats.page.html
+++ b/app/pages/stats/stats.page.html
@@ -1,5 +1,8 @@
 <ion-header [translucent]="true">
   <ion-toolbar color="primary">
+    <ion-buttons slot="start">
+      <ion-menu-button menu="leftMenu"></ion-menu-button>
+    </ion-buttons>
     <ion-title>
       Statistics
     </ion-title>
