--- a/app/pages/dogs/edit-dog/edit-dog.page.html
+++ b/app/pages/dogs/edit-dog/edit-dog.page.html
@@ -1,9 +1,9 @@
 <ion-header>
-  <ion-toolbar class="ion-color" [style.background-color]="dog?.color" [style.color]="dog?.colorText">
+  <ion-toolbar class="ion-color" [style.background-color]="dogColor" [style.color]="dog?.colorText">
     <ion-buttons slot="start">
-      <ion-back-button [defaultHref]="['/dzd/dogs/', dog?.id]"></ion-back-button>
+      <ion-back-button [defaultHref]="['/app/dogs/', dog?.id]"></ion-back-button>
     </ion-buttons>
-    <ion-title>Edit {{ dog?.name }}</ion-title>
+    <ion-title class="ion-text-capitalize">Edit {{ dog?.name }}</ion-title>
     <ion-buttons slot="primary">
       <ion-button (click)="updateDog()" [disabled]="!form.valid">
         <ion-icon name="checkmark" slot="icon-only"></ion-icon>
@@ -22,7 +22,7 @@
         <ion-col>
           <ion-item>
             <ion-label position="floating">KC Name</ion-label>
-            <ion-input type="text" autocomplete="off" autocorrect="off" formControlName="kc_name"></ion-input>
+            <ion-input type="text" autocomplete="off" autocorrect="off" formControlName="kcName" class="ion-text-capitalize"></ion-input>
           </ion-item>
         </ion-col>
       </ion-row>
@@ -30,7 +30,7 @@
         <ion-col>
           <ion-item>
             <ion-label position="floating">Name</ion-label>
-            <ion-input type="text" autocomplete="off" autocorrect="off" formControlName="name"></ion-input>
+            <ion-input type="text" autocomplete="off" autocorrect="off" formControlName="name" class="ion-text-capitalize"></ion-input>
           </ion-item>
         </ion-col>
         <ion-col>
@@ -41,6 +41,46 @@
               <ion-select-option value="Bitch">Bitch</ion-select-option>
             </ion-select>
           </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <ion-item>
+            <ion-label position="floating">Breed</ion-label>
+            <ion-input type="text" autocomplete="on" autocorrect="on" formControlName="breed" class="ion-text-capitalize"></ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <ion-item>
+            <ion-label position="floating">Date of Birth</ion-label>
+            <ion-datetime formControlName="dateOfBirth"></ion-datetime>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <ion-item>
+            <ion-label position="floating">Microchip</ion-label>
+            <ion-input type="number" inputmode="numeric" autocomplete="off" autocorrect="off" formControlName="microchip"></ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row class="ion-align-items-center">
+        <ion-col size="10">
+          <ion-item>
+            <ion-label position="floating">Signature Colour</ion-label>
+            <ion-select formControlName="color" (ionChange)="changeDogColor($event)" interface="popover">
+              <ion-select-option *ngFor="let c of dogColors" value="{{ c.code }}">{{ c.color }}</ion-select-option>
+              <ion-select-option value="#008000">Green</ion-select-option>
+            </ion-select>
+          </ion-item>
+        </ion-col>
+        <ion-col size="2" style="display: flex; justify-content: center" class="ion-padding-top">
+          <ion-avatar class="ion-float-right dogAvatar" [style.border-color]="dogColor" [style.background-color]="dogColor">
+            <ion-img src="../../assets/img/generic-paw.png" width="50px" height="50px"></ion-img>
+          </ion-avatar>
         </ion-col>
       </ion-row>
     </ion-grid>
