--- a/app/pages/dogs/dog-detail/dog-detail.page.html
+++ b/app/pages/dogs/dog-detail/dog-detail.page.html
@@ -29,10 +29,54 @@
       </ion-col>
     </ion-row>
   </ion-grid>
-  
-  <ion-list>
-    <ion-item *ngFor="let w of weights | async">
-      <ion-label><h2>{{ w.weight | number: '1.2-2' }}kg</h2><p>{{ w.date.toDate() | date: 'dd MMMM yyyy' }}</p></ion-label>
-    </ion-item>
-  </ion-list>
+
+  <ion-grid>
+    <ion-row>
+      <ion-col size="12" size-md="6" size-xl="4" class="ion-no-padding" *ngIf="dog.currWeight;">
+        <ion-card [routerLink]="['/app/dogs/weights/', dog.id]" class="ion-margin">
+          <ion-card-header>
+            <ion-card-title [style.color]="dog.color">Recent Weights
+              <ion-icon name="stats-chart-outline" style="float:right"></ion-icon>
+            </ion-card-title>
+          </ion-card-header>
+          <ion-card-content>
+            <ion-grid>
+              <ion-row class="ion-align-items-center">
+                <ion-col class="ion-text-center" *ngIf="dog.prevWeight && dog.currWeight">
+                  <ion-label color="secondary">
+                    <h2 style="font-weight: 800;">{{ dog.prevWeight.weight | number: '1.2-2' }}kg</h2>
+                    <p>{{ dog.prevWeight.date.toDate() | date: "MMM d" }}</p>
+                  </ion-label>
+                </ion-col>
+                <ion-col class="ion-text-center" *ngIf="dog.prevWeight && dog.currWeight">
+                  <span>
+                    <ion-label *ngIf="dog.currWeight.weight - dog.prevWeight.weight > 0" color="danger">
+                      <p><ion-icon name="arrow-up-outline"></ion-icon><span class="ion-hide-lg-down">{{ dog.currWeight.weight - dog.prevWeight.weight | number: '1.2-2' }}kg</span></p>
+                    </ion-label>
+                    <ion-label *ngIf="dog.currWeight.weight - dog.prevWeight.weight < 0" color="success">
+                      <p><ion-icon name="arrow-down-outline"></ion-icon><span class="ion-hide-lg-down">{{ dog.prevWeight.weight - dog.currWeight.weight | number: '1.2-2' }}kg</span></p>
+                    </ion-label>
+                    <ion-label *ngIf="dog.currWeight.weight - dog.prevWeight.weight == 0">
+                      <p><ion-icon name="reorder-two-outline"></ion-icon></p>
+                    </ion-label>
+                  </span>
+                </ion-col>
+                <ion-col class="ion-text-center" *ngIf="dog.currWeight">
+                  <ion-label color="secondary">
+                    <h2 style="font-weight: 800;">{{ dog.currWeight.weight | number: '1.2-2' }}kg</h2>
+                    <p>{{ dog.currWeight.date.toDate() | date: "MMM d" }}</p>
+                  </ion-label>
+                </ion-col>
+                <!-- <ng-template #elseBlock>
+                  <ion-col class="ion-text-center" size-sm="12">
+                    <ion-label class="ion-text-wrap"><p>Not enough weights currently recorded for this dog.</p></ion-label>
+                  </ion-col>
+                </ng-template> -->
+              </ion-row>
+              </ion-grid>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
