--- a/app/pages/dogs/weights/weights.page.html
+++ b/app/pages/dogs/weights/weights.page.html
@@ -14,7 +14,7 @@
     <div [hidden]="screen != 'chart'" >
       <ion-card>
       <ion-card-header>
-        <ion-card-subtitle>Weights over the last 6 months</ion-card-subtitle>
+        <ion-card-subtitle class="ion-text-uppercase">Weights over the last year</ion-card-subtitle>
       </ion-card-header>
       <ion-card-content class="ion-padding-horizontal">
         <div class="chart-container" style="height:60vh;">
