--- a/app/pages/stats/stats.page.html
+++ b/app/pages/stats/stats.page.html
@@ -20,7 +20,7 @@
     <div [hidden]="stats != 'weights'" >
     <ion-card>
         <ion-card-header>
-          <ion-card-subtitle>Weights over the last 6 months</ion-card-subtitle>
+          <ion-card-subtitle class="ion-text-uppercase">Weights over the last 6 months</ion-card-subtitle>
         </ion-card-header>
         <ion-card-content class="ion-padding-horizontal">
           <div class="chart-container" style="height:40vh;">
@@ -30,7 +30,7 @@
       </ion-card>
 
       <ion-list class="ion-padding-end">
-        <ion-item *ngFor="let dog of dogs | async" [routerLink]="['/app/dogs/weights/', dog.id]" routerDirection="forward">
+        <ion-item *ngFor="let dog of dogs" [routerLink]="['/app/dogs/weights/', dog.id]" routerDirection="forward">
           <ion-avatar class="dogAvatar" [style.border-color]="dog.color" [style.background-color]="dog.color" slot="start">
             <ion-img *ngIf="dog.imageUrl; else genericImg" [src]="dog.imageUrl"></ion-img>
             <ng-template #genericImg><ion-img src="../../assets/img/generic-paw.png"></ion-img></ng-template>
@@ -38,19 +38,19 @@
           <ion-label>
             <ion-grid>
               <ion-row class="ion-align-items-center">
-                <ion-col class="ion-hide-sm-down">
+                <ion-col class="ion-hide-sm-down" size-sm="5" size-md="3">
                   <h2 class="ion-text-uppercase" [style.color]="dog.color"><strong>{{ dog.name }}</strong></h2>
                   <!-- <a [routerLink]="['/app/dogs/weights/', dog.id]" routerDirection="forward" style="text-decoration: none;">
                     <h2 class="ion-text-uppercase" [style.color]="dog.color"><strong>{{ dog.name }}</strong></h2>
                   </a> -->
                 </ion-col>
-                <ion-col class="ion-text-center" *ngIf="dog.prevWeight && dog.currWeight">
+                <ion-col class="ion-text-center" size-sm="3" *ngIf="dog.prevWeight && dog.currWeight">
                   <ion-label>
                     <h2>{{ dog.prevWeight.weight | number: '1.2-2' }}kg</h2>
                     <p>{{ dog.prevWeight.date.toDate() | date: "MMM d" }}</p>
                   </ion-label>
                 </ion-col>
-                <ion-col class="ion-text-center" *ngIf="dog.prevWeight && dog.currWeight; else elseBlock">
+                <ion-col class="ion-text-center" size-sm="1" size-md="3" *ngIf="dog.prevWeight && dog.currWeight; else elseBlock">
                   <span>
                     <ion-label *ngIf="dog.currWeight.weight - dog.prevWeight.weight > 0" color="danger">
                       <p><ion-icon name="arrow-up-outline"></ion-icon><span class="ion-hide-lg-down">{{ dog.currWeight.weight - dog.prevWeight.weight | number: '1.2-2' }}kg</span></p>
@@ -63,14 +63,14 @@
                     </ion-label>
                   </span>
                 </ion-col>
-                <ion-col class="ion-text-center" *ngIf="dog.prevWeight && dog.currWeight">
+                <ion-col class="ion-text-center" size-sm="3" *ngIf="dog.prevWeight && dog.currWeight">
                   <ion-label>
                     <h2>{{ dog.currWeight.weight | number: '1.2-2' }}kg</h2>
                     <p>{{ dog.currWeight.date.toDate() | date: "MMM d" }}</p>
                   </ion-label>
                 </ion-col>
                 <ng-template #elseBlock>
-                  <ion-col class="ion-text-center" size-sm="9">
+                  <ion-col class="ion-text-center" size-sm="7" size-md="9">
                     <ion-label class="ion-text-wrap"><p>Not enough weights currently recorded for this dog.</p></ion-label>
                   </ion-col>
                 </ng-template>
