changed ready for v1.4

--- a/app/pages/dogs/dog/dog.page.html
+++ b/app/pages/dogs/dog/dog.page.html
@@ -6,7 +6,7 @@
     </ion-buttons>
     <ion-title class="ion-text-capitalize">{{ dog?.name }}</ion-title>
     <ion-buttons slot="end">
-      <ion-button [routerLink]="['/app/dogs/edit/', dog?.id]">
+      <ion-button [routerLink]="['/app/dzd/dogs/edit/', dog?.id]">
         <ion-icon name="create-outline" slot="icon-only"></ion-icon>
     </ion-button>
     </ion-buttons>
@@ -18,7 +18,7 @@
   <ion-grid class="ion-no-padding" [style.background-color]="dog?.color" [style.color]="dog?.colorText">
     <ion-row style="align-items: center;">
       <ion-col size-xs="12" size-sm="3" size-md="2" size-lg="3" size-xl="2" class="ion-no-padding ion-text-center">
-          <ion-avatar class="dogAvatar ion-margin-top ion-margin-bottom" style="border-color: white;" [style.background-color]="dog?.color">
+          <ion-avatar class="dogAvatar ion-margin-top ion-margin-bottom" [style.border-color]="dog?.colorText" [style.background-color]="dog?.color">
             <ion-img *ngIf="dog?.imageUrl; else genericImg" [src]="dog?.imageUrl" width="100px" height="100px" ></ion-img>
             <ng-template #genericImg><ion-img src="../../assets/img/generic-paw.png" width="100px" height="100px" ></ion-img></ng-template>
           </ion-avatar>
@@ -32,7 +32,7 @@
   <ion-grid>
     <ion-row>
       <ion-col size="12" size-md="6" size-xl="4" class="ion-no-padding">
-        <ion-card [routerLink]="['/app/dogs/details/', dog.id]" class="ion-margin">
+        <ion-card [routerLink]="['/app/dzd/dogs/details/', dog.id]" class="ion-margin">
           <ion-card-header>
             <ion-card-title [style.color]="dog.color">Dog Details
               <ion-icon name="paw-outline" style="float:right"></ion-icon>
@@ -44,7 +44,7 @@
                 <ion-label>{{ birthDate }}</ion-label>
                 <ion-badge slot="end" *ngIf="age > 0">{{ age }}</ion-badge>
               </ion-item>
-              <ion-item *ngIf="microchip.num!==''" lines="none">
+              <ion-item *ngIf="microchip.num!==''">
                 <fa-icon [icon]="['fas', 'barcode']" slot="start"></fa-icon>
                 <ion-label>{{ microchip.num }}</ion-label>
                 <ion-note slot="end" color="secondary" *ngIf="microchip.provider!==''">
@@ -56,7 +56,7 @@
       </ion-col>
 
       <ion-col size="12" size-md="6" size-xl="4" class="ion-no-padding" *ngIf="dog.currWeight;">
-        <ion-card [routerLink]="['/app/dogs/weights/', dog.id]" class="ion-margin">
+        <ion-card [routerLink]="['/app/dzd/dogs/weights/', dog.id]" class="ion-margin">
           <ion-card-header>
             <ion-card-title [style.color]="dog.color">Recent Weights
               <ion-icon name="stats-chart-outline" style="float:right"></ion-icon>
@@ -101,17 +101,18 @@
         </ion-card>
       </ion-col>
 
-      <ion-col size="12" size-md="6" size-xl="4" class="ion-no-padding" *ngIf="health?.length">
-        <ion-card>
+      <ion-col size="12" size-md="6" size-xl="4" class="ion-no-padding" *ngIf="healthData?.length">
+        <ion-card [routerLink]="['/app/dzd/dogs/health/', dog.id]" class="ion-margin">
           <ion-card-header>
             <ion-card-title [style.color]="dog.color">Health Results
               <ion-icon name="medkit-outline" style="float:right"></ion-icon>
             </ion-card-title>
           </ion-card-header>
-          <ion-card-content>
-
-
-
+          <ion-card-content class="ion-no-padding">
+              <ion-item *ngFor="let h of healthData">
+                <ion-label>{{ h.label }}</ion-label>
+                <ion-note slot="end" color="secondary">{{ h.note }}</ion-note>
+              </ion-item>
           </ion-card-content>    
         </ion-card>    
       </ion-col>
