--- a/app/pages/dogs/edit-dog/edit-dog.page.html
+++ b/app/pages/dogs/edit-dog/edit-dog.page.html
@@ -1,7 +1,7 @@
 <ion-header>
-  <ion-toolbar class="ion-color" [style.background-color]="dogColor" [style.color]="dog?.colorText">
+  <ion-toolbar class="ion-color" [style.background-color]="dogColor" [style.color]="textColor">
     <ion-buttons slot="start">
-      <ion-back-button [defaultHref]="['/app/dogs/', dog?.id]"></ion-back-button>
+      <ion-back-button [defaultHref]="['/app/dzd/dogs/', dog?.id]"></ion-back-button>
     </ion-buttons>
     <ion-title class="ion-text-capitalize">Edit {{ dog?.name }}</ion-title>
     <ion-buttons slot="primary">
