--- a/app/pages/dogs/weights/weights.page.html
+++ b/app/pages/dogs/weights/weights.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar class="ion-color" [style.background-color]="dog.color" [style.color]="dog.colorText">
     <ion-buttons slot="start">
       <ion-menu-button menu="leftMenu"></ion-menu-button>
-      <ion-back-button [defaultHref]="['/app/dogs/', dog.id]"></ion-back-button>
+      <ion-back-button [defaultHref]="['/app/dzd/dogs/', dog.id]"></ion-back-button>
     </ion-buttons>
     <ion-title class="ion-text-capitalize">Weights for {{ dog.name }}</ion-title>
   </ion-toolbar>
