--- a/app/pages/account/account.page.html
+++ b/app/pages/account/account.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar color="primary">
+    <ion-buttons slot="start">
+      <ion-menu-button menu="leftMenu"></ion-menu-button>
+    </ion-buttons>
     <ion-title>Your Account</ion-title>
     <ion-buttons slot="primary">
       <ion-button (click)="signOut()" size="small" fill="outline" color="light">Log Out</ion-button>
