--- a/app/pages/dogs/health/health.page.html
+++ b/app/pages/dogs/health/health.page.html
@@ -14,5 +14,10 @@
 </ion-header>
 
 <ion-content>
-  <p>Dog detail page...</p>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="12" size-md="6">Dog Health Results...</ion-col>
+      <ion-col class="ion-hide-md-down" size-md="6">View document of selected result</ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
