--- a/app/pages/schedule/schedule.page.html
+++ b/app/pages/schedule/schedule.page.html
@@ -15,9 +15,61 @@
   </ion-segment>
 
   <div [ngSwitch]="type">
-    <div [hidden]="type != 'calendar'" >Calendar...</div>
-    <div [hidden]="type != 'reminders'" >Reminders...</div>
+    <div [hidden]="type != 'calendar'" >
+      <ion-grid class="ion-no-padding">
+        <ion-row>
+          <ion-col>
+            <ion-virtual-scroll [items]="events" [headerFn]="myHeaderFn" approxItemHeight="70px">
+              <ion-item-divider *virtualHeader="let header" color="light">
+                {{ header }}
+              </ion-item-divider>
+              <ion-item-sliding *virtualItem="let item">
+                <app-event-item [event]="item"></app-event-item>
+              </ion-item-sliding>
+            </ion-virtual-scroll>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </div>
 
+    <div [hidden]="type != 'reminders'" >
+      <ion-grid class="ion-no-padding">
+        <ion-row>
+          <ion-col>
+            <ion-list>
+              <ion-item-sliding *ngFor="let item of reminders">
+                <ion-item lines="full" class="ion-align-items-center" class="ion-align-items-start">
+                  <ion-checkbox></ion-checkbox>
+                  <ion-label>
+                    <h2>{{ item.title }}
+                      <span class="ion-margin-start" class="ion-hide-md-down">
+                        <ion-chip *ngFor="let chip of item.chips" [color]="chip.cssColor" class="dog-chip"><ion-label>{{ chip.letter }}</ion-label></ion-chip>
+                      </span>
+                      <span class="ion-margin-start" class="ion-hide-md-up">
+                        <fa-icon *ngFor="let color of item.colors" [icon]="['fas', 'circle']" [style.color]="color" style="margin:4px;"></fa-icon>
+                        <!-- <ion-icon *ngFor="let color of event.colors" name="ellipse" class="dogFlag" [style.color]="color" ></ion-icon> -->
+                      </span>
+                    </h2>
+                    <p>{{ item.date.toDate() | date: 'd/M/y' }}<span *ngIf="item.repeat">, {{ item.repeat }}</span></p>
+                  </ion-label>
+                  <ion-item-options side="end">
+                    <ion-item-option>Edit</ion-item-option>
+                    <ion-item-option color="danger">Remove</ion-item-option>
+                  </ion-item-options>
+                </ion-item>
+                <!-- <app-event-item [event]="item"></app-event-item> -->
+              </ion-item-sliding>
+            </ion-list>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </div>
   </div>
+
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button color="primary" (click)="onShowAddEventModal()">
+      <ion-icon name="add-outline"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 
 </ion-content>
