--- a/app/pages/tabs/tabs.page.html
+++ b/app/pages/tabs/tabs.page.html
@@ -11,10 +11,10 @@
       <ion-label>Statistics</ion-label>
     </ion-tab-button>
 
-    <!-- <ion-tab-button tab="schedule">
+    <ion-tab-button tab="schedule">
       <ion-icon name="calendar-outline"></ion-icon>
       <ion-label>Schedule</ion-label>
-    </ion-tab-button> -->
+    </ion-tab-button>
 
     <ion-tab-button tab="account">
       <ion-icon name="person-outline"></ion-icon>
