Currently working form of DZD

--- a/app/pages/dogs/dog/dog.page.html
+++ b/app/pages/dogs/dog/dog.page.html
@@ -189,10 +189,10 @@
         <ion-icon name="stats-chart-outline" (click)="onShowAddWeightModal()"></ion-icon>
       </ion-fab-button>
       <ion-fab-button color="dark">
-        <ion-icon name="calendar-outline"></ion-icon>
+        <ion-icon name="calendar-outline" (click)="onShowAddEventModal()"></ion-icon>
       </ion-fab-button>
       <ion-fab-button color="dark">
-        <ion-icon name="alert-circle-outline"></ion-icon>
+        <ion-icon name="alert-circle-outline" (click)="onShowAddReminderModal()"></ion-icon>
       </ion-fab-button>
       
     </ion-fab-list>
