--- a/app/pages/schedule/schedule.page.html
+++ b/app/pages/schedule/schedule.page.html
@@ -9,7 +9,7 @@
 
 <ion-content [fullscreen]="true">
 
-  <ion-segment [(ngModel)]="type">
+  <ion-segment (ionChange)="segmentChanged($event)" [value]="type">
     <ion-segment-button value="calendar">Calendar</ion-segment-button>
     <ion-segment-button value="reminders">Reminders</ion-segment-button>
   </ion-segment>
@@ -67,7 +67,7 @@
   </div>
 
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-    <ion-fab-button color="primary" (click)="onShowAddEventModal()">
+    <ion-fab-button color="primary" (click)="addEvent()">
       <ion-icon name="add-outline"></ion-icon>
     </ion-fab-button>
   </ion-fab>
